--- a/backend/elog/src/main/resources/application.properties
+++ b/backend/elog/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8081
+management.endpoints.web.exposure.includee=*
+management.endpoints.enabled-by-default=false
+management.endpoints.web.base-path=/
+spring.message=hello world from elog application dev
+endpoints.sensitive=true
