--- a/backend/elog/src/main/resources/application.properties
+++ b/backend/elog/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8081
 management.endpoints.web.exposure.includee=*
 management.endpoints.enabled-by-default=false
 management.endpoints.web.base-path=/
-
+spring.message=hello world from elog application dev
 spring.data.mongodb.uri=mongodb://gfasil:1994@cluster0-shard-00-00-qexaa.mongodb.net:27017,cluster0-shard-00-01-qexaa.mongodb.net:27017,cluster0-shard-00-02-qexaa.mongodb.net:27017/E-log?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority
